--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -265,6 +265,14 @@
           Laporan
         </a>
         <a
+          href="chat.html"
+          class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
+        >
+          <i class="fas fa-comment-dots mr-3"></i>
+          Chat Ai
+        </a>
+
+        <a
           href="pengaturan.html"
           class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
         >
