--- a/src/templates/pengaturan.html
+++ b/src/templates/pengaturan.html
@@ -206,6 +206,13 @@
           Laporan
         </a>
         <a
+          href="chat.html"
+          class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
+        >
+          <i class="fas fa-comment-dots mr-3"></i>
+          Chat Ai
+        </a>
+        <a
           href="pengaturan.html"
           class="nav-link active flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100 bg-blue-50 text-blue-600"
         >
