--- a/src/templates/transaksi.html
+++ b/src/templates/transaksi.html
@@ -100,14 +100,21 @@
           Transaksi
         </a>
         <a
-          href="#"
+          href="laporan.html"
           class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
         >
           <i class="fas fa-file-alt mr-3"></i>
           Laporan
         </a>
         <a
-          href="#"
+          href="chat.html"
+          class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
+        >
+          <i class="fas fa-comment-dots mr-3"></i>
+          Chat Ai
+        </a>
+        <a
+          href="pengaturan.html"
           class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
         >
           <i class="fas fa-cog mr-3"></i>
