feat: Revamp homepage layout and enhance user experience with animations and responsive design

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -715,7 +715,7 @@
                   <span class="text-white font-bold">AN</span>
                 </div>
                 <div>
-                  <h4 class="text-white font-semibold">Andi Nugroho</h4>
+                  <h4 class="text-white font-semibold">Andhika Fajar</h4>
                   <p class="text-blue-100 text-sm">Karyawan Swasta</p>
                 </div>
               </div>
@@ -737,7 +737,7 @@
                   <span class="text-white font-bold">SP</span>
                 </div>
                 <div>
-                  <h4 class="text-white font-semibold">Sari Permata</h4>
+                  <h4 class="text-white font-semibold">Vega Syfa</h4>
                   <p class="text-blue-100 text-sm">Ibu Rumah Tangga</p>
                 </div>
               </div>
@@ -759,7 +759,7 @@
                   <span class="text-white font-bold">RH</span>
                 </div>
                 <div>
-                  <h4 class="text-white font-semibold">Rudi Hartono</h4>
+                  <h4 class="text-white font-semibold">Maulana Seno aji</h4>
                   <p class="text-blue-100 text-sm">Pengusaha Muda</p>
                 </div>
               </div>
@@ -920,7 +920,7 @@
                     perlu!"
                   </p>
                   <p class="text-primary font-semibold text-sm mt-2">
-                    - Maya Sari, Entrepreneur
+                    - Andhika Fajar, Entrepreneur
                   </p>
                 </div>
               </div>
