--- a/src/templates/laporan.html
+++ b/src/templates/laporan.html
@@ -153,6 +153,13 @@
           Laporan
         </a>
         <a
+          href="simulasi.html"
+          class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
+        >
+          <i class="fas fa-calculator mr-3"></i>
+          Simulasi
+        </a>
+        <a
           href="chat.html"
           class="nav-link flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100"
         >
