--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -10,6 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
     <style>
       .chat-container {
         height: calc(100vh - 220px);
@@ -279,5 +280,6 @@
     </main>
 
     <script type="module" src="../js/chat.js"></script>
+     <script type="module" src="../js/hamburgermenu.js"></script>
   </body>
 </html>
