--- a/src/templates/laporan.html
+++ b/src/templates/laporan.html
@@ -13,6 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
     <style>
       .stats-card {
         background: white;
@@ -491,5 +492,6 @@
     </main>
 
     <script type="module" src="../js/laporan.js"></script>
+     <script type="module" src="../js/hamburgermenu.js"></script>
   </body>
 </html>
