--- a/src/templates/simulasi.html
+++ b/src/templates/simulasi.html
@@ -11,6 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
     <style>
       .simulation-card {
         background: white;
@@ -784,5 +785,6 @@
       });
     </script>
     <script type="module" src="../js/dashboard.js"></script>
+     <script type="module" src="../js/hamburgermenu.js"></script>
   </body>
 </html>
