--- a/src/templates/transaksi.html
+++ b/src/templates/transaksi.html
@@ -11,6 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
     <style>
       .stats-card {
         background: white;
@@ -593,5 +594,6 @@
     </div>
 
     <script type="module" src="../js/transaksi.js"></script>
+     <script type="module" src="../js/hamburgermenu.js"></script>
   </body>
 </html>
