feat: Add hamburger menu functionality and mobile responsiveness script to settings page

--- a/src/templates/pengaturan.html
+++ b/src/templates/pengaturan.html
@@ -510,5 +510,6 @@
 
     <script type="module" src="../js/pengaturan.js"></script>
     <script src="../js/mobile-responsive.js"></script>
+     <script type="module" src="../js/hamburgermenu.js"></script>
   </body>
 </html>
